# -Parallel-programming-in-C-C-

./: .gitignore  CMakeLists.txt  Parallel  main.cpp  parameters.sh  parameters.tmp  pthread  pthreader.cpp  runeverything_parallel.sh  runeverything_serial.sh  thread  thread.cpp  thread.h
